--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -1,4 +1,10 @@
-<h1>HeroesApp</h1>
-<hr>
+<mat-sidenav-container fullscreen>
+    <mat-sidenav>
+        <h1>SideNav</h1>
+    </mat-sidenav>
 
-<router-outlet></router-outlet>
+    <mat-toolbar>
+
+    </mat-toolbar>
+
+</mat-sidenav-container>
