--- a/src/app/heroes/pages/buscar/buscar.component.html
+++ b/src/app/heroes/pages/buscar/buscar.component.html
@@ -1,26 +1,31 @@
-
+ 
 <div fxLayout="column">
     <div>
         <h1>Buscador de Héroes</h1>
         <mat-divider></mat-divider>
     </div>
+
     <div>
         <h3>Buscador</h3>
-
-        <mat-form-field class="example-full-width">            
-            <input  type="text" 
+            <mat-form-field>
+                <input  type="text" 
                     placeholder="Pick One"
                     aria-label="Number",
                     matInput
                     [(ngModel)]="termino"                    
-                    matInput [matAutocomplete]="auto">
+                    matInput [matAutocomplete]="auto"
+                    (input)="buscando()">
             <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
               <mat-option *ngFor="let heroe of heroes" [value]="heroe">
                 {{heroe.superhero}}
               </mat-option>
-            </mat-autocomplete>
-          </mat-form-field>
 
-    </div>
-</div>
+              <mat-option>
+                  No se encontro héroe con ese término 
+              </mat-option>
+
+            </mat-autocomplete>
+            </mat-form-field>           
+    </div>        
+</div> 
 
