--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,4 +1,4 @@
-<h1>Nuevo Héroe <small> aaa</small></h1>
+<h1>Nuevo Héroe <small>  </small></h1>
 
 <div    fxLayout="row" 
         fxLayoutGap="40px"
