--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,4 +1,7 @@
-<h1>Nuevo Héroe <small> {{ heroe.superhero}}</small></h1>
+<h1>
+    {{(heroe.id) ? 'Editar' : 'Nuevo'}} Héroe
+    <small> {{ heroe.superhero}}</small>
+</h1>
 
 <div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
 
@@ -43,19 +46,14 @@
         <br/>
 
         <div fxLayout>
-            <button mat-raised-button 
-                    color="primary" 
-                    (click)="guardar()">
+            <button mat-raised-button color="primary" (click)="guardar()">
                 <mat-icon>edit</mat-icon>
-                Guardar
+                {{(heroe.id) ? 'Actualizar' : 'Crear'}}                
             </button>
 
             <span class="spacer"></span>
-        
-            <button *ngIf="heroe.id"
-                    mat-raised-button
-                    (click)="borrarHeroe()"
-                    color="warn">
+
+            <button *ngIf="heroe.id" mat-raised-button (click)="borrarHeroe()" color="warn">
                 <mat-icon>remove</mat-icon>
                     Borrar
             </button>
