--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -40,7 +40,8 @@
 
         <span class="spacer"></span>
 
-        <button mat-button>
+        <button mat-button
+                (click)="logOut()">
             Logout
         </button>
     </mat-toolbar>
